pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-2
spec:
  containers:
  - name: one
    image: demo:1
    args:
    - --pod=1
    - --container=container1
    - --listen=:8080
    ports:
    - containerPort: 8080
  - name: two
    image: demo:1
    args:
      - --pod=1
      - --container=container2
      - --listen=:8081
